{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 44,
  "lineage": "e0abfdbe-a460-029c-8e57-9a5ddc3670f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02be1bbc65b958e4c",
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:elastic-ip/eipalloc-02be1bbc65b958e4c",
            "domain": "vpc",
            "id": "eipalloc-02be1bbc65b958e4c",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-3-105-51-195.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.51.195",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.infinia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:internet-gateway/igw-01051f89e7b41e5c4",
            "id": "igw-01051f89e7b41e5c4",
            "owner_id": "102800183015",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "deployment_name-igw"
            },
            "tags_all": {
              "Name": "deployment_name-igw"
            },
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "dependencies": [
            "aws_vpc.infinia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:loadbalancer/net/deployment-name-nlb/49655343b60fe9a0",
            "arn_suffix": "net/deployment-name-nlb/49655343b60fe9a0",
            "dns_name": "deployment-name-nlb-49655343b60fe9a0.elb.ap-southeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:loadbalancer/net/deployment-name-nlb/49655343b60fe9a0",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "deployment-name-nlb",
            "region": "ap-southeast-2",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9002436bd3bd40c"
              }
            ],
            "subnets": [
              "subnet-0a9002436bd3bd40c"
            ],
            "vpc_id": "vpc-0cd74ba27cc2b6b11",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:listener/net/deployment-name-nlb/49655343b60fe9a0/164adca2c4259bb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:targetgroup/deployment-name-tg/e7602404314338fe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:listener/net/deployment-name-nlb/49655343b60fe9a0/164adca2c4259bb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:loadbalancer/net/deployment-name-nlb/49655343b60fe9a0",
            "mutual_authentication": [],
            "port": 8111,
            "protocol": "TCP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal_nlb",
            "aws_lb_target_group.nlb_target_group",
            "aws_subnet.private",
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:targetgroup/deployment-name-tg/e7602404314338fe",
            "arn_suffix": "targetgroup/deployment-name-tg/e7602404314338fe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:102800183015:targetgroup/deployment-name-tg/e7602404314338fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "deployment-name-tg",
            "port": 8111,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "dependencies": [
            "aws_vpc.infinia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02be1bbc65b958e4c",
            "association_id": "eipassoc-098b6858a336518f9",
            "connectivity_type": "public",
            "id": "nat-0102d1e5adbb0d278",
            "network_interface_id": "eni-003d0200f4ecb64ce",
            "private_ip": "10.0.1.97",
            "public_ip": "3.105.51.195",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03077f58b4f1a430a",
            "tags": {
              "Name": "deployment_name-nat"
            },
            "tags_all": {
              "Name": "deployment_name-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:route-table/rtb-0d3d13d028882e952",
            "id": "rtb-0d3d13d028882e952",
            "owner_id": "102800183015",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0102d1e5adbb0d278",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deployment_name-private-rt"
            },
            "tags_all": {
              "Name": "deployment_name-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:route-table/rtb-0a1c9c9d1e2074b0a",
            "id": "rtb-0a1c9c9d1e2074b0a",
            "owner_id": "102800183015",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01051f89e7b41e5c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deployment_name-public-rt"
            },
            "tags_all": {
              "Name": "deployment_name-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.infinia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ff5d2ff957c402a",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d3d13d028882e952",
            "subnet_id": "subnet-0a9002436bd3bd40c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a55f0a60665369b",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0a1c9c9d1e2074b0a",
            "subnet_id": "subnet-03077f58b4f1a430a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infinia_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:security-group/sg-0d47e4b582a0c7b0a",
            "description": "Allow TCP 8111 internally",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d47e4b582a0c7b0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8111
              }
            ],
            "name": "deployment_name-sg",
            "name_prefix": "",
            "owner_id": "102800183015",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deployment_name-sg"
            },
            "tags_all": {
              "Name": "deployment_name-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infinia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:subnet/subnet-0a9002436bd3bd40c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9002436bd3bd40c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "102800183015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "deployment_name-private-subnet"
            },
            "tags_all": {
              "Name": "deployment_name-private-subnet"
            },
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "dependencies": [
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:subnet/subnet-03077f58b4f1a430a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03077f58b4f1a430a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102800183015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "deployment_name-public-subnet"
            },
            "tags_all": {
              "Name": "deployment_name-public-subnet"
            },
            "vpc_id": "vpc-0cd74ba27cc2b6b11"
          },
          "dependencies": [
            "aws_vpc.infinia_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ec2_instance_type_offering.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infinia_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:102800183015:vpc/vpc-0cd74ba27cc2b6b11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf828d08c01b0ed2",
            "default_route_table_id": "rtb-0930d2c81a8a36e26",
            "default_security_group_id": "sg-07871a195053ff1c4",
            "dhcp_options_id": "dopt-00d94a11c3cd08869",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd74ba27cc2b6b11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0930d2c81a8a36e26",
            "owner_id": "102800183015",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "deployment_name-vpc"
            },
            "tags_all": {
              "Name": "deployment_name-vpc"
            }
          }
        }
      ]
    }
  ]
}